--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,300 +1,98 @@
-/*
- * HTML5 Boilerplate
- *
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html,
-button,
-input,
-select,
-textarea {
-    color: #222;
+html{
+    background: rgb(255, 230, 100);
+    font-family: 'Open Sans', sans-serif;
+    color: rgb(134, 79, 36);
 }
-
-body {
-    font-size: 1em;
-    line-height: 1.4;
+h1,h2,h3,h4,h5{
+    font-family: 'Vollkorn';
 }
-
-/*
- * Remove text-shadow in selection highlight: h5bp.com/i
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
+h1{
+    font-size: 54px;
+    font-weight: 400;
+    margin: 40px 0px -5px;
 }
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
+h2{
+    font-size: 27px;
+    font-weight: 400;
+    margin: 0px 0px 40px;
 }
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+.main{
+    overflow: none;
+    width: 600px;
+    margin: 0px auto;
 }
-
-/*
- * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
- */
-
-img {
-    vertical-align: middle;
+.pagetitle{
+    text-align: center;
 }
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
+#content{
+    width: 100%;
 }
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
+.textinput{
+    background: rgb(255, 250, 210);
+    border-radius: 3px;
+    border: none;
+    padding: 16px;
+    box-sizing: border-box;
+    color: rgb(90, 68, 51);
+    box-shadow: 0px 1px 3px rgb(253, 170, 80);
+    -webkit-transition: all 150ms;
 }
-
-/* ==========================================================================
-   Chrome Frame prompt
-   ========================================================================== */
-
-.chromeframe {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+.textinput:focus{
+    border: none;
+    outline: none;
+    box-shadow: 0px 2px 0px rgb(255, 194, 39) inset, 0px 1px 3px rgb(255, 133, 0) inset;
 }
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Image replacement
- */
-
-.ir {
-    background-color: transparent;
-    border: 0;
+.textinput::-webkit-input-placeholder{
+    color: rgb(201, 149, 121);
+    font-style: italic;
+}
+.button{
+    background: rgb(49, 187, 132);
+    padding: 16px;
+    color: rgb(213, 255, 252);
+    font-weight: 900;
+    cursor: pointer;
+    border-radius: 3px;
+    border: none;
+    outline: none;
+    box-shadow: 0px 2px rgb(203, 255, 203), 0px 2px 3px rgba(156, 56, 0, 0.22);
+}
+.textinput+.button{
+    margin-left: 16px;
+}
+.progressbar{
+    background: rgb(49, 187, 132);
+    border-radius: 3px;
+    margin-top:16px;
+}
+.bar{
+    height: 6px;
+    background: rgb(232, 255, 255);
+    border-radius: 3px;
+}
+.urlbox{
+    padding: 16px;
+    background: rgb(255, 130, 98);
+    text-overflow: ellipsis;
     overflow: hidden;
-    /* IE 6/7 fallback */
-    *text-indent: -9999px;
+    margin-top: 16px;
+    border-radius: 3px;
+    color: white;
+    box-shadow: 0px 1px 3px rgba(175, 126, 0, 0.26);
 }
-
-.ir:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 150%;
+.urlbox em{
+    font-weight: 900;
+    font-style: normal;
+    margin-right: 1em;
 }
-
-/*
- * Hide from both screenreaders and browsers: h5bp.com/u
- */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
+.urlbox a{
+    color: white;
+    text-decoration: none;
 }
-
-/*
- * Hide only visually, but have it available for screenreaders: h5bp.com/v
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
+.urlbox a:hover{
+    text-decoration: underline;
 }
-
-/*
- * Extends the .visuallyhidden class to allow the element to be focusable
- * when navigated to via the keyboard: h5bp.com/p
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-/*
- * Hide visually and from screenreaders, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/*
- * For IE 6/7 only
- * Include this rule to trigger hasLayout and contain floats.
- */
-
-.clearfix {
-    *zoom: 1;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid required HTTP connection: h5bp.com/r
-   ========================================================================== */
-
-@media print {
-    * {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster: h5bp.com/s */
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    /*
-     * Don't show links for images, or javascript/internal links
-     */
-
-    .ir a:after,
-    a[href^="javascript:"]:after,
-    a[href^="#"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group; /* h5bp.com/t */
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    @page {
-        margin: 0.5cm;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
+.status{
+    text-align: center;
+    margin-top: 8px;
 }
