--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,6 @@
+
+/* ---- GLOBAL STYLING ---- */
+
 html{
     position: relative;
     background: rgb(68,68,68);
@@ -25,14 +28,7 @@ h3 {
     margin: 0 0 8px;
 }
 .hidden{
-    display: none;
-}
-.btn{
-    background: rgb(184,184,184);
-    border-radius: 3px;
-    cursor: pointer;
-    color: rgb(68,68,68);
-    padding: 2px 4px;
+    display: none !important;
 }
 .centered{
     text-align: center;
@@ -50,9 +46,9 @@ h3 {
 .pagetitle{
     text-align: center;
 }
-#content{
-    width: 100%;
-}
+
+/* ----- Text Inputs ----- */
+
 .textinput{
     background: rgb(85,85,85);
     border-radius: 3px;
@@ -63,7 +59,10 @@ h3 {
     font-family: 'Source Sans Pro';
     box-sizing: border-box;
     color: rgb(180,180,180);
-    -webkit-transition: all 150ms;
+    -webkit-transition: background 150ms;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    resize: none;
 }
 .textinput:focus{
     border: none;
@@ -77,7 +76,109 @@ h3 {
 }
 .textinput.fixed{
     font-family: 'Inconsolata';
+    font-size: 16px;
 }
+.textinput+.textinput{
+    margin-left:14px;
+}
+.textinput.invalid{
+    background: rgb(112, 77, 77);
+    color: rgb(255, 150, 150);
+}
+.textinput.valid{
+    background: rgb(85, 119, 90);
+    color: rgb(150, 255, 154);
+}
+.textinput.glueleft{
+    margin-left: -5px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-left: solid 2px rgba(0, 0, 0, 0.3);
+}
+
+
+/* ----- EDITORS ----- */
+
+#editor-text{
+    width: 100%;
+    display: block;
+}
+#editor-html{
+    width: 100%;
+}
+#editor-img{
+    position: relative;
+    background: rgb(85,85,85);
+    border-radius: 3px;
+    margin-bottom: 16px;
+    border: none;
+    font-size: 16px;
+    font-family: 'Source Sans Pro';
+    box-sizing: border-box;
+    color: rgb(180,180,180);
+    -webkit-transition: background 150ms;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-height: 222px;
+    resize: none;
+    text-align: center;
+    cursor: pointer;
+    -webkit-user-select: none;
+}
+.dropinvite{
+    display: inline-block;
+    text-align: center;
+    margin-top: 66px; 
+}
+.dropinvite i{
+    font-size: 48px;
+}
+
+#img-selector{
+    opacity: 0;
+    cursor: pointer;
+    position: absolute;
+    top: 0; right: 0; bottom:0; left: 0;
+}
+.userimages img{
+    max-width: 100%;
+    border-radius: 3px;
+    display: block;
+    margin: 0px auto;
+}
+#img-error{
+    position: absolute;
+    bottom: 6px;
+    left: 20%;
+    padding: 8px;
+    right: 20%;
+    text-align: center;
+}
+#password{
+    width: 230px;
+}
+#security{
+    position: relative;
+    display: inline-block;
+    width: 120px;
+    -webkit-transition: all 250ms linear;
+}
+#security i{
+    display: inline-block;
+    width:16px;
+    text-align: center;
+}
+#security .progress{
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    width: 37%;
+    left: 0px;
+    height: 5px;
+    background: rgba(255, 255, 255, 0.08);
+}
+/* ----- BUTTONS ----- */
+
 .button{
     position: relative;
     top: 0px;
@@ -99,8 +200,6 @@ h3 {
     box-shadow: 0px 2px rgb(51, 126, 63), 0px 2px 3px rgba(0, 0, 0, 0.22);
 }
 .button:active{
-    top: 0px;
-    box-shadow: none;
     background: rgb(47, 148, 63);
 }
 .button.disabled{
@@ -114,16 +213,17 @@ h3 {
 .textinput+.button{
     margin-left: 14px;
 }
-.progressbar{
-    background: rgb(49, 187, 132);
+
+.btn{
+    background: rgb(184,184,184);
     border-radius: 3px;
-    margin-top:16px;
+    cursor: pointer;
+    color: rgb(68,68,68);
+    padding: 2px 4px;
 }
-.bar{
-    height: 6px;
-    background: rgb(232, 255, 255);
-    border-radius: 3px;
-}
+
+/* ----- URL BOX ----- */
+
 .cryptostuff{
     margin-bottom: 60px;
 }
@@ -155,8 +255,12 @@ h3 {
     margin-top: 8px;
     opacity: 0.5;
 }
+
+/* ------ LOADING SCREEN ------ */
+
 .loading{
     position: absolute;
+    z-index: 1000;
     top:0; left: 0; right: 0; bottom: 0;
     user-select: none;
     pointer-events: none;
