--- a/src/css/main.css
+++ b/src/css/main.css
@@ -294,6 +294,7 @@ h3 {
     user-select: none;
 }
 .radiobutton > .option{
+    position: relative;
     display: inline-block;
     padding: 4px 6px;
     background: rgb(85,85,85);
@@ -316,6 +317,29 @@ h3 {
 #content-type{
     /*text-align: center;*/
     margin-bottom: 16px;
+}
+/* ----- LABELS ----- */
+
+.label{
+    width: 180px;
+    display: block;
+    visibility: hidden;
+    opacity: 0;
+    text-align: center;
+    color: white;
+    background: rgb(43, 43, 43);
+    border-radius: 3px;
+    position: absolute;
+    left: 50%;
+    top: -39px;
+    line-height: 32px;
+    margin-left: -90px;
+    user-select: none;
+    -webkit-transition: all 150ms linear;
+}
+.option:hover .label, .label:hover{
+    visibility: visible;
+    opacity: 1;
 }
 
 
