--- a/src/css/main.css
+++ b/src/css/main.css
@@ -251,6 +251,9 @@ a {
 
 /* ----- URL BOX ----- */
 
+#display{
+    margin-top: 32px;
+}
 .cryptostuff{
     margin-bottom: 60px;
 }
@@ -285,12 +288,18 @@ a {
 
 /* ------ QR CODE ------ */
 
+#display-qrcode{
+    text-align: center;
+}
 #qrcode{
+    display: inline-block;
     background: white;
     padding: 16px;
+    border-radius: 3px;
+    color: black;
+    text-align: center;
 }
 #qrcode img{
-    width: 100%;
     image-rendering: -webkit-optimize-contrast;
 }
 
@@ -330,6 +339,7 @@ a {
 .radiobutton{
     display: inline-block;
     user-select: none;
+    margin-bottom: 16px;
 }
 .radiobutton > .option{
     position: relative;
@@ -352,12 +362,9 @@ a {
     border-bottom-right-radius: 3px;
 }
 
-#content-type{
-    /*text-align: center;*/
-    margin-bottom: 16px;
-}
 /* ----- LABELS ----- */
 .label {
     margin-left: 10px;
     opacity: 0.5;
 }
+
