adding css prefixes for non webkit browsers

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,9 @@ a {
 .invisible{
     opacity: 0 !important;
     -webkit-transition: opacity 150ms linear;
+       -moz-transition: opacity 150ms linear;
+        -ms-transition: opacity 150ms linear;
+            transition: opacity 150ms linear;
 }
 .centered{
     text-align: center !important;
@@ -110,6 +113,9 @@ a {
     text-decoration: none;
     margin-bottom: 10px;
     -webkit-transition: color 150ms linear;
+       -moz-transition: color 150ms linear;
+        -ms-transition: color 150ms linear;
+            transition: color 150ms linear;
 }
 .links a:hover {
     color: rgb(120,120,120);
@@ -130,10 +136,14 @@ a {
     font-family: 'Source Sans Pro';
     box-sizing: border-box;
     color: rgb(180,180,180);
-    -webkit-transition: background 150ms;
     overflow: hidden;
     text-overflow: ellipsis;
     resize: none;
+    -webkit-transition: background 150ms;
+       -moz-transition: background 150ms;
+        -ms-transition: background 150ms;
+            transition: background 150ms;
+    
 }
 .textinput:focus{
     border: none;
@@ -141,10 +151,11 @@ a {
     background: rgb(95,95,95);
     color: rgb(220,220,220);
 }
-.textinput::-webkit-input-placeholder{
-    color: rgb(150,150,150);
-    font-style: italic;
-}
+.textinput::-webkit-input-placeholder {   color: rgb(150,150,150);    font-style: italic;  }
+         .textinput::-moz-placeholder {   color: rgb(150,150,150);    font-style: italic;  }
+          .textinput:-moz-placeholder {   color: rgb(150,150,150);    font-style: italic;  }
+           .textinput:-ms-placeholder {   color: rgb(150,150,150);    font-style: italic;  }
+
 .textinput.fixed{
     font-family: 'Inconsolata';
     font-size: 16px;
@@ -187,14 +198,20 @@ a {
     font-family: 'Source Sans Pro';
     box-sizing: border-box;
     color: rgb(180,180,180);
-    -webkit-transition: background 150ms;
     overflow: hidden;
     text-overflow: ellipsis;
     min-height: 222px;
     resize: none;
     text-align: center;
     cursor: pointer;
+    -webkit-transition: background 150ms;
+       -moz-transition: background 150ms;
+        -ms-transition: background 150ms;
+            transition: background 150ms;
     -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
 .dropinvite{
     display: inline-block;
@@ -233,6 +250,9 @@ a {
     display: inline-block;
     width: 120px;
     -webkit-transition: all 250ms linear;
+       -moz-transition: all 250ms linear;
+        -ms-transition: all 250ms linear;
+            transition: all 250ms linear;
 }
 #security i{
     display: inline-block;
@@ -266,6 +286,9 @@ a {
     text-shadow: 0px 1px 1px rgba(8, 65, 5, 0.53);
     user-select: none;
     -webkit-transition: all 150ms linear;
+       -moz-transition: all 150ms linear;
+        -ms-transition: all 150ms linear;
+            transition: all 150ms linear;
 }
 .button:focus, .button:hover{
     top: -2px;
@@ -344,9 +367,6 @@ a {
     color: black;
     text-align: center;
 }
-#qrcode img{
-    image-rendering: -webkit-optimize-contrast;
-}
 
 /* ------ LOADING SCREEN ------ */
 
@@ -360,6 +380,9 @@ a {
     color: white;
     text-shadow: 0px 1px 3px rgba(0,0,0,0.5);
     -webkit-animation: all linear 500ms;
+       -moz-animation: all linear 500ms;
+        -ms-animation: all linear 500ms;
+            animation: all linear 500ms;
 }
 .loading .throbber{
     position: fixed;
