--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,20 @@ a {
     float: left;
 }
 
+@media all and (max-width: 432px){
+    .pagetitle{
+        width: 100%;
+        margin: 30px auto;
+        text-align: center;
+    }
+    .pagetitle img{
+        float: none;
+    }
+    .pagetitle h1{
+        margin-top: -10px;
+    }
+}
+
 
 /* ----- Scrollbars ----- */
 
