--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,11 @@ h1{
     font-weight: 200;
     margin: 0px;
 }
+@media all and (max-width: 295px) { 
+    h1{
+        font-size: 32px;
+    }
+}
 h2{
     font-size: 23px;
     letter-spacing: 1px;
