--- a/css/main.css
+++ b/css/main.css
@@ -250,7 +250,7 @@ a {
     background: rgb(85, 119, 90) !important;
     color: rgb(150, 255, 154) !important;
 }
-@media all and (min-width: 490px){
+@media all and (min-width: 491px){
     .textinput.glueleft{
         margin-left: -5px;
         border-top-left-radius: 0px;
@@ -569,5 +569,65 @@ a {
 .label {
     margin-left: 10px;
     opacity: 0.5;
+}
+
+/* ----- PASSWORD SCREEN ----- */
+
+@media all and (min-width: 491px) {
+    .centerbox { 
+        width: 350px; 
+        height: 200px; 
+        position: absolute;
+        top: 50%; 
+        left: 50%; 
+        margin-top: -100px; 
+        margin-left:-175px;
+    }
+}
+@media all and (max-width: 490px){
+    .centerbox{
+        padding: 0px 16px;
+    }
+}
+.centerbox h3 { 
+    font-size: 30px; 
+    margin: 30px 0px 8px; 
+    font-weight: 300; 
+}
+@media all and (min-width: 491px) {
+    .centerbox.dark { 
+        padding: 0px 32px; 
+        box-sizing: border-box; 
+        border-radius: 3px; 
+        background: rgba(0, 0, 0, 0.11); 
+    }
+}
+.bottomlink{ 
+        display: block;
+        text-align: center; 
+        text-decoration: none; 
+        color: rgb(120,120,120); 
+        margin-top: 16px;
+}
+@media all and (min-width: 491px){
+    .bottomlink{ 
+        width: 350px; 
+        position: absolute; 
+        bottom: 0px;
+        left: 50%; 
+        margin-top: 0px;
+        margin-left:-175px; 
+        margin-bottom: 8px; 
+    }
+}
+#errorbox{
+    text-align: center;
+    margin-top: 16px;
+}
+@media all and (min-width: 491px){
+    #errorbox{ 
+        margin-top: 0px;
+        width: 334px; 
+    }
 }
 
