--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@ html{
     color: rgb(184,184,184);
 }
 
+* {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 h1,h2,h3,h4,h5{
     font-family: 'Source Sans Pro';
 }
